--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-strip-css-comments": "^1.2.0",
     "grunt-text-replace": "^0.4.0",
     "grunt-uncss": "^0.4.3",
+    "gulp": "^3.9.0",
     "gulp-inline-css": "^2.0.0",
     "gulp-rename": "^1.2.2"
   }
