--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "license": "ISC",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-concat-css": "^0.3.1",
     "grunt-contrib-compress": "^0.13.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-exec": "^0.4.6",
+    "grunt-postcss": "^0.6.0",
     "grunt-processhtml": "^0.3.8",
     "grunt-strip-css-comments": "^1.2.0",
     "grunt-text-replace": "^0.4.0",
