--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-concat-css": "^0.3.1",
     "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-html-validation": "^0.1.18",
     "grunt-postcss": "^0.6.0",
     "grunt-premailer": "^0.2.13",
     "grunt-processhtml": "^0.3.8",
